--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/main_logo_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".activities.OtherUserActivity"></activity>
+        <activity android:name=".activities.UploadMaterialActivity"></activity>
+        <activity android:name=".activities.ManageUserActivity" />
+        <activity android:name=".activities.OtherUserActivity" />
         <activity android:name=".activities.EditProfileActivity" />
         <activity android:name=".activities.NavigationActivity" />
         <activity android:name=".activities.RegisterActivity" />
