--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,15 +10,26 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/main_logo_round"
         android:supportsRtl="true"
+        android:screenOrientation="portrait"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".activities.UploadMaterialActivity"></activity>
-        <activity android:name=".activities.ManageUserActivity" />
-        <activity android:name=".activities.OtherUserActivity" />
-        <activity android:name=".activities.EditProfileActivity" />
-        <activity android:name=".activities.NavigationActivity" />
-        <activity android:name=".activities.RegisterActivity" />
-        <activity android:name=".activities.LoginActivity" />
-        <activity android:name=".activities.LandingActivity">
+        <activity android:name=".activities.ComicActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.UploadMaterialActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.ManageUserActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.OtherUserActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.EditProfileActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.NavigationActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.RegisterActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.LoginActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".activities.LandingActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
